--- a/index.html
+++ b/index.html
@@ -304,9 +304,9 @@ http://www.tooplate.com/view/2109-the-card
 
         <!-- Footer -->
         <footer>
-          || Copyright &copy; 2018 Company Name || 
+          || Copyright &copy; 2023 Company Name || 
                   
-        	Design: <a rel="nofollow" href="https://fb.com/tooplate">Tooplate</a> || 
+        	Design: <a rel="nofollow" href="https://fb.com/derian.nazareno">DerianDev</a> || 
         
         </footer>
       </div>
